<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

     </group>
    <item android:title="@string/settings">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/settings" />

            </group>
        </menu>
    </item>
    <item android:title="@string/rate_us">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/about_us"
                    android:title="@string/about_us" />

            </group>
        </menu>
    </item>


    <item android:title="@string/profile">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/person"
                    android:title="@string/profile" />


            </group>
        </menu>
    </item>



</menu>