<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-36dp">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        tools:ignore="InvalidId" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_67sdp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frame2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.018"
            tools:ignore="MissingConstraints">


            <ImageButton
                android:id="@+id/learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/Learn_btn"
                android:scaleType="center"
                android:src="@drawable/learntostudy"
                tools:ignore="InvalidId" />

            <TextView
                android:layout_width="61sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="43sp"
                android:contextClickable="false"
                android:text="@string/Learn_To_Study"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="@dimen/_9ssp"
                tools:ignore="TextSizeCheck,VisualLintBounds" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_34sdp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frame3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/frame1"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.082"
            tools:ignore="MissingConstraints">


            <ImageButton
                android:id="@+id/solved_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/solved_btn"
                android:scaleType="centerCrop"
                android:src="@drawable/solved"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50sp"
                android:contextClickable="false"
                android:text="@string/SolvedProblems"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="@dimen/_9ssp"
                tools:ignore="TextSizeCheck,VisualLintBounds" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame3"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_34sdp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/frame2"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.082"
            tools:ignore="MissingConstraints,TextSizeCheck,VisualLintBounds">

            <ImageButton
                android:id="@+id/practice_button"
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/prac_btn"
                android:paddingHorizontal="15sp"
                android:scaleType="centerCrop"
                android:src="@drawable/practice"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="43sp"
                android:text="@string/practice"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                tools:ignore="VisualLintBounds,TextContrastCheck" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame4"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="172dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck">

            <ImageButton
                android:id="@+id/test_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="TODO"
                android:paddingHorizontal="15sp"
                android:scaleType="centerCrop"
                android:src="@drawable/test"
                tools:ignore="ContentDescription,HardcodedText,DuplicateSpeakableTextCheck,ImageContrastCheck" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="42sp"
                android:text="@string/take_test"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                tools:ignore="TextContrastCheck">


            </TextView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame5"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="172dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.778"
            app:layout_constraintStart_toEndOf="@+id/frame4"
            tools:ignore="MissingConstraints,TextSizeCheck">

            <ImageButton
                android:id="@+id/tips_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:paddingHorizontal="15sp"
                android:scaleType="centerCrop"
                android:src="@drawable/tips"
                tools:ignore="ContentDescription,DuplicateSpeakableTextCheck,InvalidId,SpeakableTextPresentCheck" />


            <TextView
                android:id="@id/tips_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="42sp"
                android:text="@string/tips_and_tricks"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                tools:ignore="VisualLintBounds,TextContrastCheck" />

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>