<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-36dp">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        tools:ignore="InvalidId" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <include
            android:id="@+id/toolbar5"
            layout="@layout/toolbar5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_boat"
            android:layout_width="357dp"
            android:layout_height="69dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_btn"
            android:drawableLeft="@drawable/boat"
            android:paddingHorizontal="16dp"
            android:text="@string/boat"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar5"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_calender"
            android:layout_width="357dp"
            android:layout_height="69dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_btn"
            android:drawableLeft="@drawable/calendar"
            android:paddingHorizontal="16dp"
            android:text="@string/calender"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_boat"
            app:layout_constraintVertical_bias="0.007"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_clock"
            android:layout_width="357dp"
            android:layout_height="69dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_btn"
            android:drawableLeft="@drawable/clock"
            android:paddingHorizontal="16dp"
            android:text="@string/clock"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_calender"
            app:layout_constraintVertical_bias="0.006"
            tools:ignore="DuplicateIds,VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_train"
            android:layout_width="357dp"
            android:layout_height="69dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_btn"
            android:drawableLeft="@drawable/train"
            android:paddingHorizontal="16dp"
            android:text="@string/train"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_clock"
            app:layout_constraintVertical_bias="0.091"
            tools:ignore="DuplicateIds,VisualLintButtonSize,VisualLintBounds" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>